--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <i class="fas fa-bars"></i>
             </a>
             <a href="#">
-                <i class="fas fa-sticky-note"></i>
+                <i class="fa-solid fa-address-card"></i>
             </a>
         </nav>
 
